--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -9,6 +9,8 @@ source:
 requirements:
     build:
         - python
-        - setuptools
+        - six
+
     run:
+        - six
         - python
